# stdexec-gtk-example

./: README.md  meson.build
glib/: execution.h  meson.build
glib/examples/: simple_io.cpp
subprojects/: stdexec.wrap
subprojects/packagefiles/stdexec-patch/: meson.build
subprojects/packagefiles/stdexec-patch/examples/: meson.build
subprojects/packagefiles/stdexec-patch/test/: meson.build
