
example_hello_world = executable('hello_world', 'hello_world.cpp',
                                 dependencies: stdexec_dep)

example_hello_coro = executable('hello_coro', 'hello_coro.cpp',
                                dependencies: stdexec_dep)

example_scope = executable('scope', 'scope.cpp',
                           dependencies: stdexec_dep)

example_retry = executable('retry', 'retry.cpp',
                           dependencies: stdexec_dep)

example_then = executable('then', 'then.cpp',
                          dependencies: stdexec_dep)
