
test_src = [
  'test_main.cpp',
  'stdexec/cpos/test_cpo_bulk.cpp',
  'stdexec/cpos/test_cpo_ensure_started.cpp',
  'stdexec/cpos/test_cpo_receiver.cpp',
  'stdexec/cpos/test_cpo_start.cpp',
  'stdexec/cpos/test_cpo_connect.cpp',
  'stdexec/cpos/test_cpo_schedule.cpp',
  'stdexec/cpos/test_cpo_split.cpp',
  'stdexec/cpos/test_cpo_upon_error.cpp',
  'stdexec/cpos/test_cpo_upon_stopped.cpp',
  'stdexec/concepts/test_concept_scheduler.cpp',
  'stdexec/concepts/test_concepts_receiver.cpp',
  'stdexec/concepts/test_concept_operation_state.cpp',
  'stdexec/concepts/test_concepts_sender.cpp',
  'stdexec/concepts/test_awaitables.cpp',
  'stdexec/algos/factories/test_just.cpp',
  'stdexec/algos/factories/test_transfer_just.cpp',
  'stdexec/algos/factories/test_just_error.cpp',
  'stdexec/algos/factories/test_just_stopped.cpp',
  'stdexec/algos/factories/test_read.cpp',
  'stdexec/algos/adaptors/test_on.cpp',
  'stdexec/algos/adaptors/test_transfer.cpp',
  'stdexec/algos/adaptors/test_schedule_from.cpp',
  'stdexec/algos/adaptors/test_then.cpp',
  'stdexec/algos/adaptors/test_upon_error.cpp',
  'stdexec/algos/adaptors/test_upon_stopped.cpp',
  'stdexec/algos/adaptors/test_let_value.cpp',
  'stdexec/algos/adaptors/test_let_error.cpp',
  'stdexec/algos/adaptors/test_let_stopped.cpp',
  'stdexec/algos/adaptors/test_bulk.cpp',
  'stdexec/algos/adaptors/test_split.cpp',
  'stdexec/algos/adaptors/test_when_all.cpp',
  'stdexec/algos/adaptors/test_transfer_when_all.cpp',
  'stdexec/algos/adaptors/test_into_variant.cpp',
  'stdexec/algos/adaptors/test_stopped_as_optional.cpp',
  'stdexec/algos/adaptors/test_stopped_as_error.cpp',
  'stdexec/algos/adaptors/test_ensure_started.cpp',
  'stdexec/algos/consumers/test_start_detached.cpp',
  'stdexec/algos/consumers/test_sync_wait.cpp',
  'stdexec/algos/other/test_execute.cpp',
  'stdexec/detail/test_completion_signatures.cpp',
  'stdexec/detail/test_utility.cpp',
  'stdexec/queries/test_get_forward_progress_guarantee.cpp',
  'stdexec/queries/test_forwarding_queries.cpp',
  'exec/test_any_sender.cpp',
  'exec/test_type_async_scope.cpp',
  'exec/test_create.cpp',
  'exec/test_env.cpp',
  'exec/test_on.cpp',
  'exec/test_on2.cpp',
  'exec/test_on3.cpp',
  'exec/async_scope/test_dtor.cpp',
  'exec/async_scope/test_spawn.cpp',
  'exec/async_scope/test_spawn_future.cpp',
  'exec/async_scope/test_empty.cpp',
  'exec/async_scope/test_stop.cpp',
  'exec/test_when_any.cpp',
  'exec/test_at_coroutine_exit.cpp',
  'exec/test_materialize.cpp',
]

test_bin = executable('test_stdexec', test_src,
                     dependencies: [stdexec_dep, catch2_dep])

test('test.stdexec', test_bin)
